test/fail/type-self-dependency-recursive.grace
let A = B
let B = a
